[feat] add default pages [feat] start working on top nav

--- a/src/render/locales/ar/shared.ar.json
+++ b/src/render/locales/ar/shared.ar.json
@@ -3,6 +3,7 @@
   "back": "رجوع",
   "confirm": "تاكيد",
   "cancel": "الغاء",
+  "app_name": "يد العون",
   "toast": {
     "success": "تم الحفظ بنجاح",
     "failed": "حدث خطاء"
