--- a/src/render/locales/ar/shared.ar.json
+++ b/src/render/locales/ar/shared.ar.json
@@ -4,6 +4,8 @@
   "confirm": "تاكيد",
   "cancel": "الغاء",
   "app_name": "يد العون",
+  "account": "حسابي",
+  "logout": "خروج",
   "toast": {
     "success": "تم الحفظ بنجاح",
     "failed": "حدث خطاء"
