[add] beneficiary table [packages add] faker

--- a/src/render/locales/ar/organization.ar.json
+++ b/src/render/locales/ar/organization.ar.json
@@ -5,7 +5,7 @@
     "branches": "الفروع",
     "branch_name": "اسم الفرع",
     "branch_address": "عنون الفرع",
-    "sponsorship_cases": "حالات الدعم",
+    "sponsorship_cases": "حالات الكفالة",
     "scheduled_visits": "زيارات مجدوله للمستفيدين"
   },
   "main_branch": "الفرع الرئيسي",
